syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message kick_toS {}

message kick_toC {}
